# cargo-semver-checks

./: .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  RUSTDOC_SCHEMA_REFERENCE.md  funding.json
.cargo/: config.toml
.github/: FUNDING.yml  dependabot.yml  settings.yml
.github/ISSUE_TEMPLATE/: 1-false-positive.yml  2-false-negative.yml  3-bug-report.yml  4-feature-request.yml  bug_report.yml  feature_request.yml
.github/workflows/: actionlint.yml  add_new_rust_to_matrix.yml  build-binaries.yml  ci.yml  dependencies.yml  lint_fix.yml  publish.yml  release.yml  update_snapshots.yml
brand/: Extra Logo Pincers and Box.ai  Icon Blue.ai  Icon Orange.ai  Icon White.ai  Logo 1.ai  Logo 2.ai
rustdoc_tests/implicit_bin/: Cargo.toml
scripts/: check_reference_links.sh  download_prebuilt_test_rustdocs.sh  find_comparison_version.sh  find_workspace_crate_names.sh  get_current_version.sh  hash_test_rustdocs_inputs.sh  is_version_already_uploaded.sh  make_new_lint.sh  make_new_test_crate.sh  regenerate_test_rustdocs.sh  rename_lint.sh  sort_add_lints.sh
semver_tests/: Cargo.toml
semver_tests/src/: main.rs  test_cases.rs
semver_tests/src/import_handling/: item_relocation.rs
semver_tests/src/test_cases/: auto_trait_impl_removed.rs  derive_trait_impl_removed.rs  enum_repr_c_removed.rs  enum_repr_int_changed.rs  enum_repr_int_removed.rs  enum_struct_variant_field_missing.rs  enum_structvariant_field_missing.rs  enum_variant_missing.rs  item_missing.rs  mod.rs  non_exhaustive.rs  parameter_count_changed.rs  sized_impl_removed.rs  struct_pub_field_missing.rs  struct_repr_c_removed.rs  struct_repr_transparent_removed.rs
src/: adapter.rs  baseline.rs  callbacks.rs  cannot_be_built.rs  check_release.rs  config.rs  dump.rs  execution.rs  indexed_crate.rs  lib.rs  main.rs  manifest.rs  proposed_new_lib_api.rs  query.rs  rustdoc_cmd.rs  rustdoc_gen.rs  rustdoc_generation.rs  rustdoc_schema.graphql  snapshot_tests.rs  templating.rs  util.rs  witness_gen.rs
src/data_generation/: error.rs  generate.rs  mod.rs  progress.rs  request.rs
src/lints/: AGENTS.md  attribute_proc_macro_missing.ron  auto_trait_impl_added.ron  auto_trait_impl_removed.ron  constructible_struct_adds_field.ron  constructible_struct_adds_private_field.ron  constructible_struct_changed_type.ron  copy_impl_added.ron  declarative_macro_missing.ron  default_feature_newly_directly_enables_feature.ron  default_feature_newly_transitively_enables_feature.ron  derive_helper_attr_removed.ron  derive_proc_macro_missing.ron  derive_trait_impl_removed.ron  enum_added_without_non_exhaustive.ron  enum_changed_kind.ron  enum_discriminants_undefined_non_exhaustive_variant.ron  enum_discriminants_undefined_non_unit_variant.ron  enum_marked_non_exhaustive.ron  enum_missing.ron  enum_must_use_added.ron  enum_must_use_removed.ron  (+289 more)
test_crates/: .gitignore  AGENTS.md  Cargo.toml  README.md
test_crates/feature_missing/new/: Cargo.toml
test_crates/feature_missing/old/: Cargo.toml
test_crates/feature_newly_implies_feature/old/: Cargo.toml
test_crates/feature_no_longer_enables_feature/new/: Cargo.toml
test_crates/feature_no_longer_implies_feature/old/: Cargo.toml
test_crates/feature_not_enabled_by_default/new/: Cargo.toml
test_crates/feature_not_enabled_by_default/old/: Cargo.toml
test_crates/features_simple/new/: Cargo.toml
test_crates/features_simple/new/src/: lib.rs
test_crates/function_feature_changed/new/: Cargo.toml
test_crates/function_feature_changed/new/src/: lib.rs
test_crates/manifest_tests/all_lint_group/new/: Cargo.toml
test_crates/manifest_tests/all_lint_group/new/src/: lib.rs
test_crates/manifest_tests/lint_group/new/: Cargo.toml
test_crates/manifest_tests/lint_group/new/src/: lib.rs
test_crates/manifest_tests/workspace_overrides/new/: Cargo.toml
test_crates/manifest_tests/workspace_overrides/new/pkg/: Cargo.toml
test_crates/manifest_tests/workspace_overrides/new/pkg/src/: lib.rs
test_crates/semver_trick_self_referential/new/: Cargo.toml
test_crates/semver_trick_self_referential/new/src/: lib.rs
test_outputs/: auto_trait_impl_removed.output.ron  constructible_struct_adds_private_field.output.ron  derive_trait_impl_removed.output.ron  enum_marked_non_exhaustive.output.ron  enum_missing.output.ron  enum_must_use_added.output.ron  enum_no_repr_variant_discriminant_changed.output.ron  enum_now_doc_hidden.output.ron  enum_repr_c_removed.output.ron  enum_repr_int_changed.output.ron  enum_repr_int_removed.output.ron  enum_repr_transparent_removed.output.ron  enum_struct_union_deprecated_added.output.ron  enum_struct_variant_field_added.output.ron  enum_struct_variant_field_missing.output.ron  enum_struct_variant_field_now_doc_hidden.output.ron  enum_tuple_variant_field_added.output.ron  enum_tuple_variant_field_missing.output.ron  enum_tuple_variant_field_now_doc_hidden.output.ron  enum_unit_variant_changed_kind.output.ron  enum_variant_added.output.ron  enum_variant_discriminant_changed.output.ron  enum_variant_marked_non_exhaustive.output.ron  enum_variant_missing.output.ron  exported_function_changed_abi.output.ron  function_abi_no_longer_unwind.output.ron  function_changed_abi.output.ron  function_const_removed.output.ron  function_export_name_changed.output.ron  function_missing.output.ron  function_must_use_added.output.ron  function_now_doc_hidden.output.ron  function_parameter_count_changed.output.ron  inherent_associated_const_now_doc_hidden.output.ron  inherent_associated_pub_const_missing.output.ron  inherent_method_const_removed.output.ron  inherent_method_missing.output.ron  inherent_method_must_use_added.output.ron  inherent_method_unsafe_added.output.ron  integration_snapshots__bugreport.snap  (+59 more)
tests/: baseline_report.rs  color_config.rs  custom_registry.rs  detects_target_dependencies.rs  feature_config.rs  integration_snapshots.rs  lib_tests.rs  lint_config.rs  passing_manifest_or_directory.rs  rustdoc_edge_cases.rs  snapshot_tests.rs  specified_target.rs  target_dir.rs  verify_binary_contains_lints.rs  workspace_lint_config.rs
(+1579 files in other folders)
