[package]
name = "cargo-semver-checks"
version = "0.38.0"
edition = "2021"
authors = ["Predrag Gruevski <obi1kenobi82@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "Scan your Rust crate for semver violations."
repository = "https://github.com/obi1kenobi/cargo-semver-checks"
readme = "./README.md"
keywords = ["semver", "linter", "check", "crate", "cargo"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
rust-version = "1.81"
exclude = [".github/", "brand/", "scripts/", "test_crates/", "test_outputs/", "tests/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trustfall = "0.8.0"  # Ensure this matches the `trustfall_core` dev-dependency version below.
# `cargo_metadata` is used at the API boundary of `trustfall_rustdoc`,
# so ensure the version we use for `cargo_metadata` here matches what `trustfall_rustdoc` uses too.
trustfall_rustdoc = { version = "0.20.0", default-features = false, features = ["v32", "v33", "v35", "v36", "v37", "rayon", "rustc-hash"] }
cargo_metadata = "0.19.1"
# End of dependency block

clap = { version = "4.5.21", features = ["derive", "cargo"] }
serde_json = "1.0.133"
anyhow = "1.0.94"
ron = "0.8.1"
serde = { version = "1.0.215", features = ["derive"] }
semver = "1.0.23"
handlebars = "6.2.0"
atty = "0.2.14"
clap-cargo = { version = "0.14.1", features = ["cargo_metadata"] }
ignore = "0.4.23"
clap-verbosity-flag = "3.0.1"
log = "0.4.22"
fs-err = "3.0.0"
# Note that `tame-index` and `gix` must be upgraded in lock-step to retain the same `gix`
# minor version. Otherwise, one will compile `gix` two times in different minor versions.
gix = { version = "0.68", default-features = false, features = ["max-performance-safe", "revision"] }
tame-index = { version = "0.16", features = ["sparse"] }

human-panic = "2.0.2"
bugreport = "0.5.0"
itertools = "0.13.0"
cargo_toml = "0.20.5"
toml = "0.8.19"
directories = "5.0.1"
sha2 = "0.10.8"
rustc_version = "0.4.1"
rayon = "1.10.0"
anstyle = "1.0.10"
anstream = "0.6.18"
urlencoding = "2.1.3"
cargo-config2 = "0.1.29"

[dev-dependencies]
assert_cmd = "2.0"
similar-asserts = { version = "1.6.0", features = ["serde"] }
predicates = "3.1.2"
insta = { version = "1.41.1", features = ["ron", "filters", "toml"] }
regex = "1.11.1"
insta-cmd = "0.6.0"
rayon = "1.10.0"
trustfall_core = "0.8.0"  # Ensure this matches the `trustfall` version above.

# In dev and test profiles, compile all dependencies with optimizations enabled,
# but still checking debug assertions and overflows.
#
# This produces a more than 10x speedup on tests, since the tests
# check dozens of test crates with dozens of trustfall queries.
[profile.dev.package."*"]
opt-level = 3
debug-assertions = true
overflow-checks = true
codegen-units = 16

[profile.test.package."*"]
opt-level = 3
debug-assertions = true
overflow-checks = true
codegen-units = 16

[features]
default = ["gix-reqwest"]

# Gix has mutually exclusive features that are exposed through tame-index. Hard-coding either of
# these features can lead to compile errors when another crate enables the other feature through
# workspace feature unification. We therefore allow downstream users to choose which feature to
# enable:
gix-reqwest = ["tame-index/gix-reqwest"]
gix-curl = ["tame-index/gix-curl"]
