[package]
name = "cargo-semver-checks"
version = "0.42.0"
edition = "2024"
authors = ["Predrag Gruevski <obi1kenobi82@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "Scan your Rust crate for semver violations."
repository = "https://github.com/obi1kenobi/cargo-semver-checks"
readme = "./README.md"
keywords = ["semver", "linter", "check", "crate", "cargo"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
rust-version = "1.87"
exclude = [".github/", "brand/", "scripts/", "test_crates/", "test_outputs/", "tests/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trustfall = "0.8.1"  # Ensure this matches the `trustfall_core` dev-dependency version below.
# `cargo_metadata` is used at the API boundary of `trustfall_rustdoc`,
# so ensure the version we use for `cargo_metadata` here matches what `trustfall_rustdoc` uses too.
trustfall_rustdoc = { version = "0.28.0", default-features = false, features = ["v43", "v45", "v53", "rayon", "rustc-hash"] }
cargo_metadata = "0.19.1"
# End of dependency block

clap = { version = "4.5.26", features = ["derive", "cargo"] }
serde_json = "1.0.137"
anyhow = "1.0.95"
ron = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
semver = "1.0.25"
handlebars = "6.3.0"
atty = "0.2.14"
clap-cargo = { version = "0.15.2", features = ["cargo_metadata"] }
ignore = "0.4.23"
clap-verbosity-flag = "3.0.2"
log = "0.4.25"
fs-err = "3.0.0"
# Note that `tame-index` and `gix` must be upgraded in lock-step to retain the same `gix`
# minor version. Otherwise, one will compile `gix` two times in different minor versions.
gix = { version = "0.72", default-features = false, features = ["max-performance-safe", "revision"] }
tame-index = { version = "0.21", features = ["sparse"] }

human-panic = "2.0.2"
bugreport = "0.5.1"
itertools = "0.14.0"
cargo_toml = "0.21.0"
toml = "0.8.19"
directories = "6.0.0"
sha2 = "0.10.8"
rustc_version = "0.4.1"
rayon = "1.10.0"
anstyle = "1.0.10"
anstream = "0.6.18"
urlencoding = "2.1.3"
cargo-config2 = "0.1.32"

[dev-dependencies]
assert_cmd = "2.0"
similar-asserts = { version = "1.6.1", features = ["serde"] }
predicates = "3.1.3"
insta = { version = "1.42.0", features = ["ron", "filters", "toml"] }
regex = "1.11.1"
insta-cmd = "0.6.0"
rayon = "1.10.0"
trustfall_core = "0.8.1"  # Ensure this matches the `trustfall` version above.

# In dev and test profiles, compile all dependencies with optimizations enabled,
# but still checking debug assertions and overflows.
#
# This produces a more than 10x speedup on tests, since the tests
# check dozens of test crates with dozens of trustfall queries.
[profile.dev.package."*"]
opt-level = 3
debug-assertions = true
overflow-checks = true
codegen-units = 16

[profile.test.package."*"]
opt-level = 3
debug-assertions = true
overflow-checks = true
codegen-units = 16

[profile.release]
lto = true
codegen-units = 1

[features]
default = ["gix-reqwest"]

# Gix has mutually exclusive features that are exposed through tame-index. Hard-coding either of
# these features can lead to compile errors when another crate enables the other feature through
# workspace feature unification. We therefore allow downstream users to choose which feature to
# enable:
gix-reqwest = ["tame-index/gix-reqwest"]
gix-curl = ["tame-index/gix-curl"]
