[package]
name = "cargo-semver-checks"
version = "0.49.0"
edition = "2024"
authors = ["Predrag Gruevski <obi1kenobi82@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "Scan your Rust crate for semver violations."
repository = "https://github.com/obi1kenobi/cargo-semver-checks"
readme = "./README.md"
keywords = ["semver", "linter", "check", "crate", "cargo"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
rust-version = "1.93"
exclude = [".github/", "brand/", "scripts/", "test_crates/", "test_outputs/", "tests/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trustfall = "0.8.1"  # Ensure this matches the `trustfall_core` dev-dependency version below.
# `cargo_metadata` is used at the API boundary of `trustfall_rustdoc`,
# so ensure the version we use for `cargo_metadata` here matches what `trustfall_rustdoc` uses too.
trustfall_rustdoc = { version = "0.39.0", default-features = false, features = ["v57", "v60", "rayon", "rustc-hash"] }
cargo_metadata = "0.23.0"
# End of dependency block

clap = { version = "4.5.26", features = ["derive", "cargo"] }
serde_json = "1.0.137"
anyhow = "1.0.95"
ron = "0.12.0"
serde = { version = "1.0.217", features = ["derive"] }
semver = "1.0.25"
handlebars = "6.3.0"
clap-cargo = { version = "0.18.0", features = ["cargo_metadata"] }
ignore = "0.4.23"
clap-verbosity-flag = "3.0.2"
log = "0.4.25"
fs-err = "3.0.0"
gix = { version = "0.85.0", default-features = false, features = ["max-performance-safe", "revision", "sha1", "sha256"] }
tame-index = { version = "0.26", features = ["sparse"] }
reqwest = { version = "0.13.1", default-features = false, features = ["rustls-no-provider", "http2", "system-proxy"] }
rustls = { version = "0.23.36", default-features = false, features = ["ring", "std", "tls12", "logging"] }

human-panic = "2.0.2"
bugreport = "0.6.0"
itertools = "0.15.0"
cargo_toml = "1.0.0"
toml = "1.1.2"
directories = "6.0.0"
sha2 = "0.11.0"
rustc_version = "0.4.1"
rayon = "1.10.0"
anstyle = "1.0.10"
anstream = "1.0.0"
urlencoding = "2.1.3"
cargo-config2 = "0.1.32"
rand = "0.10.2"

[dev-dependencies]
assert_cmd = "2.0"
similar-asserts = { version = "2.0.0", features = ["serde"] }
predicates = "3.1.3"
insta = { version = "1.42.0", features = ["ron", "filters", "toml"] }
regex = "1.11.1"
insta-cmd = "0.7.0"
rayon = "1.10.0"
trustfall_core = "0.8.1"  # Ensure this matches the `trustfall` version above.

# In dev and test profiles, compile all dependencies with optimizations enabled,
# but still checking debug assertions and overflows.
#
# This produces a more than 10x speedup on tests, since the tests
# check dozens of test crates with dozens of trustfall queries.
[profile.dev.package."*"]
opt-level = 3
debug-assertions = true
overflow-checks = true
codegen-units = 16

[profile.test.package."*"]
opt-level = 3
debug-assertions = true
overflow-checks = true
codegen-units = 16

[profile.release]
lto = true
codegen-units = 1

[features]
default = []

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
