[package]
name = "semver_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
enum_missing = []
enum_repr_int_removed = []
enum_repr_c_removed = []
enum_variant_added = []
enum_variant_missing = []
function_missing = []
inherent_method_missing = []
struct_marked_non_exhaustive = []
struct_missing = []
struct_pub_field_missing = []
struct_repr_c_removed = []
struct_repr_transparent_removed = []
unit_struct_changed_kind = []
variant_marked_non_exhaustive = []
